<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTC-e.com Trader Client</string>
    <string name="title_office">Private office</string>
    <string name="title_charts">Exchange Rates</string>
    <string name="title_fullscreen">Full Screen</string>
    <string name="action_view">Appearance</string>
    <string name="action_about">About</string>
    <string name="action_detailed">Detailed list</string>
    <string name="action_classic">Classic pairs</string>
    <string name="action_vector">Course direction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_fullscreen">Full Screen</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="stat">Statistics:</string>
    <string name="theme_black">Dark theme</string>
    <string name="black_diagram">Use black charts</string>
    <string name="need_restart">Apply after restart</string>
    <string name="bottom_panel">Buttons on bottom panel</string>
    <string name="api_settings">API settings</string>
    <string name="sec_settings">Security settings</string>
    <string name="early_settings">Early access</string>
    <string name="finance">Finance:</string>
    <string name="chat">Chat</string>
    <string name="enabled_charts">Сurrency pairs</string>

    <string name="pin_new">Enter new PIN</string>
    <string name="pin_new_repeat">Repeat new PIN</string>
    <string name="pin_new_off">PIN off</string>
    <string name="pin_new_set">PIN on</string>
    <string name="pin_new_notset">PIN not set!</string>
    <string name="pin_new_nottrue">PIN not equal!</string>
    <string name="pin_fail">Invalid PIN!</string>

    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="history">History</string>
    <string name="buy_orders">Buy orders:</string>
    <string name="sell_orders">Sell orders:</string>
    <string name="your_orders">Your orders</string>
    <string name="orders">Orders</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="order_cancelation">Cancel order</string>
    <string name="order_cancelation_string">Are you sure to cancel order: ID</string>
    <string name="yes">Yes!</string>
    <string name="no">No</string>
    <string name="coast">*</string>

    <string name="order_error">Error! Order</string>
    <string name="order_not_closed">NOT closed.</string>
    <string name="order">Order</string>
    <string name="closed">closed.</string>

    <string name="tax">Fee</string>
    <string name="total">Total</string>
    <string name="price_for">Price per</string>
    <string name="amount_of">Amount</string>
    <string name="yourbal">Your balance:</string>

    <string name="low_balance_nopermission">Result: not enough money or do not have permission to trading.</string>
    <string name="result_success">Result: Success</string>
    <string name="you_sell">Sell</string>
    <string name="you_buy">Buy</string>
    <string name="receive">Receive</string>
    <string name="new_order">New order created.</string>
    <string name="still">Remaining</string>
    <string name="transaction_id">Transaction ID</string>

    <string name="last_query">Last query</string>
    <string name="success">success</string>
    <string name="trade_permission">Trading permission</string>
    <string name="present">present</string>
    <string name="no_present">no</string>
    <string name="all_transaction">Total transaction</string>
    <string name="open_orders">Orders opened</string>

    <string name="chat_warning">Loading...\nWarning: Chat is in alpha testing</string>

    <string name="cant_retrieve">Can\'t get data for</string>
    <string name="new_pair_detected">New pairs detected on server. Enable prefered in settings.</string>

    <string name="only_kitkat">Required Android 4.4 for Full Screen</string>

    <string name="last">Last:</string>
    <string name="low">Low:</string>
    <string name="high">High:</string>

    <string name="trial">Hi!\n\nThis is FREE version of app.\n\nIf application is usefully for you, please buy full version.\n\nThank you for understanding!</string>

    <string name="trial2">Hi!\n\nLots of updates, new futures and fixes available in paid version:\n -PIN-code protection\n -Hide unused pairs\n -Show the balance when buy, sell\n -Buy sell directly from orderbook\n -Slider to adjust order\n- Chat (yearly access)\n\nBuying the paid version you speed application development.\n\nThank you for understanding!</string>
    <string name="use_proxy">Use proxy</string>

</resources>
