<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial"
            android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:autoLink="web"
            android:textStyle="bold" android:paddingBottom="10dp"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:id="@+id/btnAppBuy" android:layout_gravity="center"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/btnCnclTRL" android:layout_gravity="center"/>
</LinearLayout>